refactor: complete Code Structure and Design tasks for benchmarking
Completed C2-C5 refactoring tasks from benchmarking/plan.md:

C2. Property and Path Unification
- Standardized on benchmark.results.dir property across all modules
- Updated BenchmarkRunner.getOutputDirectory() to read benchmark.results.dir first
- Removed legacy benchmark.output.dir property usage
- JFR runner now consistently uses ${jmh.result.filePrefix}

C3. Runner Consolidation and Config Builder Adoption
- All runners now use BenchmarkConfiguration.fromSystemProperties()
- Removed direct BenchmarkOptionsHelper calls in runners
- Common BenchmarkRunner now uses unified configuration approach
- JfrBenchmarkRunner converted to use BenchmarkConfiguration

C4. API Cleanup
- Removed superseded BenchmarkOptionsHelper class entirely (pre-1.0)
- BenchmarkResultProcessor now supports explicit benchmark.type property
- Added fallback to auto-detection when property not set

C5. Explicit Benchmark Type Parameter
- Added overloaded processResults method with explicit BenchmarkType parameter
- Integration runner explicitly passes BenchmarkType.INTEGRATION
- Library runner explicitly passes BenchmarkType.MICRO
- Runners no longer rely solely on heuristic-based type detection

All changes follow pre-1.0 development rules with direct code changes and no deprecations.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>